--- a/pom.xml
+++ b/pom.xml
@@ -11,19 +11,20 @@
 
   <modules>
     <module>fooBarQix</module>
+    <module>molky</module>
   </modules>
 
   <properties>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.12</maven.compiler.target>
+    <maven.compiler.source>1.12</maven.compiler.source>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.3.1</version>
+        <scope>test</scope>
     </dependency>
 
     <dependency>
